--- a/crawler/package.json
+++ b/crawler/package.json
@@ -4,19 +4,31 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node ./src/crowller.ts"
+    "dev": "ts-node ./src/index.ts",
+    "build": "tsc -w",
+    "start": "nodemon node ./build/index.js"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "./data/*"
+    ]
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cookie-session": "^2.0.42",
+    "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   },
   "dependencies": {
     "@types/cheerio": "^0.22.27",
+    "@types/express": "^4.17.11",
     "@types/superagent": "^4.1.10",
     "cheerio": "^1.0.0-rc.5",
+    "cookie-session": "^1.4.0",
+    "express": "^4.17.1",
     "superagent": "^6.1.0"
   }
 }
